--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>test</title>
-</head>
+<link href="dist/index.1faf95.css" rel="stylesheet"></head>
 <body>
   <div id="app"></div>
-  <script src="dist/index.js"></script>
-</body>
+<script type="text/javascript" src="dist/index.1faf95.js"></script></body>
 </html>
