--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>test</title>
-<link href="dist/index.5f36b2.css" rel="stylesheet"></head>
+<link href="dist/index.484915.css" rel="stylesheet"></head>
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="dist/index.5f36b2.js"></script></body>
+<script type="text/javascript" src="dist/index.484915.js"></script></body>
 </html>
