--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
   <title>test</title>
-<link href="dist/index.484915.css" rel="stylesheet"></head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no" />
+  <link rel="manifest" href="manifest.json" />
+<link href="dist/index.c74fce.css" rel="stylesheet"></head>
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="dist/index.484915.js"></script></body>
+  <script>
+    // if ('serviceWorker' in navigator) {           
+    //   navigator.serviceWorker.register('/assets/js/service-worker.js', {scope: '/'}).then(function (registration) {
+    //     // 注册成功
+    //     console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    //   }).catch(function (err) {                   
+    //     // 注册失败 :(
+    //     console.log('ServiceWorker registration failed: ', err);
+    //   });
+    // }
+  </script>
+<script type="text/javascript" src="dist/index.c74fce.js"></script></body>
 </html>
