--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
   <title>test</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no" />
+  <link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <div id="app"></div>
+  <script>
+    // if ('serviceWorker' in navigator) {           
+    //   navigator.serviceWorker.register('/assets/js/service-worker.js', {scope: '/'}).then(function (registration) {
+    //     // 注册成功
+    //     console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    //   }).catch(function (err) {                   
+    //     // 注册失败 :(
+    //     console.log('ServiceWorker registration failed: ', err);
+    //   });
+    // }
+  </script>
 </body>
 </html>
