--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>test</title>
+  <title>DisLido homepage</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no" />
-  <link rel="manifest" href="manifest.json" />
+  <!-- <link rel="manifest" href="manifest.json" /> -->
 </head>
 <body>
   <div id="app"></div>
