--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>test</title>
+  <title>DisLido homepage</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no" />
-  <link rel="manifest" href="manifest.json" />
-<link href="dist/index.c74fce.css" rel="stylesheet"></head>
+  <!-- <link rel="manifest" href="manifest.json" /> -->
+<link href="dist/index.e8ab9d.css" rel="stylesheet"></head>
 <body>
   <div id="app"></div>
   <script>
@@ -19,5 +19,5 @@
     //   });
     // }
   </script>
-<script type="text/javascript" src="dist/index.c74fce.js"></script></body>
+<script type="text/javascript" src="dist/index.e8ab9d.js"></script></body>
 </html>
