--- a/src/index.template.html
+++ b/src/index.template.html
@@ -10,9 +10,9 @@
   <div id="app"></div>
   <script>
     // if ('serviceWorker' in navigator) {           
-    //   navigator.serviceWorker.register('/assets/js/service-worker.js', {scope: '/'}).then(function (registration) {
+    //   navigator.serviceWorker.register('service-worker.js', {scope: '/'}).then(function (registration) {
     //     // 注册成功
-    //     console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    //     console.log('ServiceWorker registration successful with scope: ', registration.scope, registration);
     //   }).catch(function (err) {                   
     //     // 注册失败 :(
     //     console.log('ServiceWorker registration failed: ', err);
