--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <!-- <link rel="manifest" href="manifest.json" /> -->
-<link href="dist/index.e8ab9d.css" rel="stylesheet"></head>
+</head>
 <body>
   <div id="app"></div>
   <script>
     // if ('serviceWorker' in navigator) {           
-    //   navigator.serviceWorker.register('/assets/js/service-worker.js', {scope: '/'}).then(function (registration) {
+    //   navigator.serviceWorker.register('service-worker.js', {scope: '/'}).then(function (registration) {
     //     // 注册成功
-    //     console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    //     console.log('ServiceWorker registration successful with scope: ', registration.scope, registration);
     //   }).catch(function (err) {                   
     //     // 注册失败 :(
     //     console.log('ServiceWorker registration failed: ', err);
     //   });
     // }
   </script>
-<script type="text/javascript" src="dist/index.e8ab9d.js"></script></body>
+<script type="text/javascript" src="dist/index.js"></script></body>
 </html>
