--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <!-- <link rel="manifest" href="manifest.json" /> -->
-<link href="dist/index.fb672f.css" rel="stylesheet"></head>
+</head>
 <body>
   <div id="app"></div>
   <script>
@@ -19,5 +19,5 @@
     //   });
     // }
   </script>
-<script type="text/javascript" src="dist/index.fb672f.js"></script></body>
+<script type="text/javascript" src="dist/index.js"></script></body>
 </html>
