--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
     //   });
     // }
   </script>
-<script type="text/javascript" src="dist/index.js"></script></body>
+<script type="text/javascript" src="dist/index.a8fca4.js"></script></body>
 </html>
