finish pixeldrawer base feaure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <!-- <link rel="manifest" href="manifest.json" /> -->
-<link href="dist/index.21501d.css" rel="stylesheet"></head>
+<link href="dist/index.f6fc19.css" rel="stylesheet"></head>
 <body>
   <div id="app"></div>
   <script>
@@ -19,5 +19,5 @@
     //   });
     // }
   </script>
-<script type="text/javascript" src="dist/index.21501d.js"></script></body>
+<script type="text/javascript" src="dist/index.f6fc19.js"></script></body>
 </html>
