--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DisLido homepage</title>
+  <title>加载中... - DisLido Homepage</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <!-- <link rel="manifest" href="manifest.json" /> -->
-<link href="dist/index.e5bf20.css" rel="stylesheet"></head>
+<link href="dist/index.8b5c90.css" rel="stylesheet"></head>
 <body>
   <div id="app"></div>
   <script>
@@ -19,5 +19,5 @@
     //   });
     // }
   </script>
-<script type="text/javascript" src="dist/vendor_8e8a74.prod.js"></script><script type="text/javascript" src="dist/index.e5bf20.js"></script></body>
+<script type="text/javascript" src="dist/vendor_8e8a74.prod.js"></script><script type="text/javascript" src="dist/index.8b5c90.js"></script></body>
 </html>
