--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DisLido homepage</title>
+  <title>加载中... - DisLido Homepage</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <!-- <link rel="manifest" href="manifest.json" /> -->
