remove scrict mode, add github icon dropdown

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <!-- <link rel="manifest" href="manifest.json" /> -->
-</head>
+<link href="dist/index.757418.css" rel="stylesheet"></head>
 <body>
   <div id="app"></div>
   <script>
@@ -19,5 +19,5 @@
     //   });
     // }
   </script>
-<script type="text/javascript" src="dist/vendor_726cb7.dev.js"></script><script type="text/javascript" src="dist/index.4b214c.js"></script></body>
+<script type="text/javascript" src="dist/vendor_23dd45.prod.js"></script><script type="text/javascript" src="dist/index.757418.js"></script></body>
 </html>
