--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <!-- <link rel="manifest" href="manifest.json" /> -->
+  <script>window.location.href = 'https://dislido.cn'</script>
 <link href="dist/index.b5534f.css" rel="stylesheet"></head>
 <body>
   <div id="app"></div>
